ARM: backport CMA framework (required for omapdrm)

--- a/series.conf
+++ b/series.conf
@@ -158,6 +158,22 @@
         ########################################################
 	patches.arch/arm-phys-offset.patch
 	patches.arch/arm-omap-add-drm.patch
+	patches.arch/ARM-CMA-0001-mm-page_alloc-remove-trailing-whitespace.patch
+	patches.arch/ARM-CMA-0002-mm-compaction-introduce-isolate_migratepages_range.patch
+	patches.arch/ARM-CMA-0003-mm-compaction-introduce-map_pages.patch
+	patches.arch/ARM-CMA-0004-mm-compaction-introduce-isolate_freepages_range.patch
+	patches.arch/ARM-CMA-0005-mm-compaction-export-some-of-the-functions.patch
+	patches.arch/ARM-CMA-0006-mm-page_alloc-introduce-alloc_contig_range.patch
+	patches.arch/ARM-CMA-0007-mm-page_alloc-change-fallbacks-array-handling.patch
+	patches.arch/ARM-CMA-0008-mm-mmzone-MIGRATE_CMA-migration-type-added.patch
+	patches.arch/ARM-CMA-0009-mm-page_isolation-MIGRATE_CMA-isolation-functions-ad.patch
+	patches.arch/ARM-CMA-0010-mm-Serialize-access-to-min_free_kbytes.patch
+	patches.arch/ARM-CMA-0011-mm-extract-reclaim-code-from-__alloc_pages_direct_re.patch
+	patches.arch/ARM-CMA-0012-mm-trigger-page-reclaim-in-alloc_contig_range-to-sta.patch
+	patches.arch/ARM-CMA-0013-drivers-add-Contiguous-Memory-Allocator.patch
+	patches.arch/ARM-CMA-0014-X86-integrate-CMA-with-DMA-mapping-subsystem.patch
+	patches.arch/ARM-CMA-0015-ARM-integrate-CMA-with-DMA-mapping-subsystem.patch
+	patches.arch/ARM-CMA-0016-ARM-Samsung-use-CMA-for-2-memory-banks-for-s5p-mfc-d.patch
 
 	########################################################
 	# S/390
