Fix NULL pointer derference in acpi_ns_check_object_type() (kernel bug 44171).

--- a/series.conf
+++ b/series.conf
@@ -245,6 +245,8 @@
 	patches.fixes/acpi_quirk_cover_all_timer_overrides.patch
 	patches.fixes/fujitsu_amilo_v2030_timeroverride_quirk.patch
 
+	patches.fixes/acpica_fix_null_pointer_in_repair_code.patch
+
 	########################################################
 	# CPUFREQ
 	########################################################
