- mach-dove: define TIMER_PHYS_BASE. - Update config files.

--- a/series.conf
+++ b/series.conf
@@ -157,6 +157,7 @@
 	patches.arch/arm-omap-add-drm.patch
 	patches.arch/arm-revert-omap-ehci-fix.patch
 	patches.arch/arm-revert-omap-hsmmc-cmd12.patch
+	patches.arch/mach-dove-define-TIMER_PHYS_BASE.patch
 
 	########################################################
 	# S/390
