ARM: OMAP: dss: GLOBAL_BUFFER hack.

--- a/series.conf
+++ b/series.conf
@@ -158,6 +158,7 @@
         ########################################################
 	patches.arch/arm-phys-offset.patch
 	patches.arch/arm-omap-add-drm.patch
+	patches.arch/arm-omap-drm-fix-global-buffer.patch
 	patches.arch/ARM-CMA-0001-mm-page_alloc-remove-trailing-whitespace.patch
 	patches.arch/ARM-CMA-0002-mm-compaction-introduce-isolate_migratepages_range.patch
 	patches.arch/ARM-CMA-0003-mm-compaction-introduce-map_pages.patch
