ARM: Add PM support for OMAP4460 (fixes instability issues)

--- a/series.conf
+++ b/series.conf
@@ -173,6 +173,7 @@
 	patches.arch/ARM-CMA-0012-mm-trigger-page-reclaim-in-alloc_contig_range-to-sta.patch
 	patches.arch/ARM-CMA-0013-drivers-add-Contiguous-Memory-Allocator.patch
 	patches.arch/ARM-CMA-0015-ARM-integrate-CMA-with-DMA-mapping-subsystem.patch
+	patches.arch/arm-omap-fix-4460.patch
 
 	########################################################
 	# S/390
