- Linux 3.4.5. - Refresh patches.fixes/bridge-module-get-put.patch. - Delete patches.fixes/acpi_quirk_cover_all_timer_overrides.patch. - Delete   patches.fixes/fujitsu_amilo_v2030_timeroverride_quirk.patch. - Delete   patches.fixes/mm-correctly-synchronize-rss-counters-at-exit-exec.patch. - Delete   patches.fixes/nfs-force-the-legacy-idmapper-to-be-single-threaded. - Delete   patches.fixes/udf-Avoid-run-away-loop-when-partition-table-length-.patch. - Delete patches.fixes/udf-Fortify-loading-of-sparing-table.patch. - Delete   patches.fixes/udf-Use-ret-instead-of-abusing-i-in-udf_load_logical.patch.

--- a/series.conf
+++ b/series.conf
@@ -31,6 +31,7 @@
 	patches.kernel.org/patch-3.4.1-2
 	patches.kernel.org/patch-3.4.2-3
 	patches.kernel.org/patch-3.4.3-4
+	patches.kernel.org/patch-3.4.4-5
 
         ########################################################
         # Build fixes that apply to the vanilla kernel too.
@@ -196,7 +197,6 @@
 	patches.suse/readahead-request-tunables.patch
 	patches.fixes/fs-partitions-efi-c-corrupted-guid-partition-tables-can-cause-kernel-oops
 	patches.fixes/mm-Fix-assertion-mapping-nrpages-0-in-end_writeback.patch
-	patches.fixes/mm-correctly-synchronize-rss-counters-at-exit-exec.patch
 
         ########################################################
         # IPC patches
@@ -242,8 +242,6 @@
 
 	patches.arch/dell_latitude_e6xxx_e5xxx__fix_reboot.patch
 
-	patches.fixes/acpi_quirk_cover_all_timer_overrides.patch
-	patches.fixes/fujitsu_amilo_v2030_timeroverride_quirk.patch
 
 	patches.fixes/acpica_fix_null_pointer_in_repair_code.patch
 
@@ -288,7 +286,6 @@
 +needs_update37	patches.fixes/nfsd-06-sunrpc-cache-retry-cache-lookups-that-return-ETIMEDO.patch
 	patches.fixes/nfs-adaptive-readdir-plus
 	patches.fixes/nfs-connect-timeout
-	patches.fixes/nfs-force-the-legacy-idmapper-to-be-single-threaded
 
 	########################################################
 	# lockd + statd
@@ -358,9 +355,6 @@
 	# other filesystem stuff
 	########################################################
 	patches.fixes/hfs-avoid-crash-in-hfs_bnode_create
-	patches.fixes/udf-Use-ret-instead-of-abusing-i-in-udf_load_logical.patch
-	patches.fixes/udf-Avoid-run-away-loop-when-partition-table-length-.patch
-	patches.fixes/udf-Fortify-loading-of-sparing-table.patch
 
 	########################################################
 	# Swap-over-NFS
@@ -655,6 +649,7 @@
 	patches.xen/xen3-patch-3.2
 	patches.xen/xen3-patch-3.3
 	patches.xen/xen3-patch-3.4
+	patches.xen/xen3-patch-3.4.4-5
 	patches.xen/xen3-apei_allow_drivers_access_nvs_ram.patch
 	patches.xen/xen3-acpi_implement_overriding_of_arbitrary_acpi_tables_via_initrd.patch
 	patches.xen/xen3-stack-unwind
