--- a/series.conf
+++ b/series.conf
@@ -32,6 +32,7 @@
 	patches.kernel.org/patch-3.4.2-3
 	patches.kernel.org/patch-3.4.3-4
 	patches.kernel.org/patch-3.4.4-5
+	patches.kernel.org/patch-3.4.5-6
 
         ########################################################
         # Build fixes that apply to the vanilla kernel too.
@@ -240,9 +241,6 @@
 +trenn	patches.arch/acpi_implement_overriding_of_arbitrary_acpi_tables_via_initrd.patch
 
 	patches.arch/dell_latitude_e6xxx_e5xxx__fix_reboot.patch
-
-
-	patches.fixes/acpica_fix_null_pointer_in_repair_code.patch
 
 	########################################################
 	# CPUFREQ
