- Update Xen patches to 3.5-final and c/s 1184. - Delete patches.xen/xen3-apei_allow_drivers_access_nvs_ram.patch.

--- a/series.conf
+++ b/series.conf
@@ -593,8 +593,7 @@
 	patches.xen/xen3-patch-3.2
 	patches.xen/xen3-patch-3.3
 	patches.xen/xen3-patch-3.4
-	patches.xen/xen3-patch-3.5-rc3
-	patches.xen/xen3-apei_allow_drivers_access_nvs_ram.patch
+	patches.xen/xen3-patch-3.5
 	patches.xen/xen3-acpi_implement_overriding_of_arbitrary_acpi_tables_via_initrd.patch
 	patches.xen/xen3-stack-unwind
 	patches.xen/xen3-x86_64-unwind-annotations
