--- a/series.conf
+++ b/series.conf
@@ -369,6 +369,7 @@
 	# Wireless Networking
 	########################################################
 	patches.suse/b43-missing-firmware-info.patch
+	patches.fixes/brcmsmac-firmware
 
 	########################################################
 	# ISDN
