ALSA: hda - Fix mute-LED GPIO setup for HP Mini 210 (bnc#772923).

--- a/series.conf
+++ b/series.conf
@@ -407,6 +407,7 @@
 	##########################################################
 	# Sound
 	##########################################################
+	patches.drivers/ALSA-hda-Fix-mute-LED-GPIO-setup-for-HP-Mini-210
 
 	########################################################
 	# Char / serial
