--- a/series.conf
+++ b/series.conf
@@ -208,6 +208,8 @@
 +trenn	patches.arch/acpica_fix_wrongly_mapped_acpi_table_header_when_overriding_via_initrd.patch
 +trenn	patches.arch/acpi_implement_overriding_of_arbitrary_acpi_tables_via_initrd.patch
 
+	patches.arch/srat_parsing_redo_return.patch
+
 	########################################################
 	# CPUFREQ
 	########################################################
