ACPI: Only count valid srat memory structures (bnc#757888).

--- a/series.conf
+++ b/series.conf
@@ -209,6 +209,7 @@
 +trenn	patches.arch/acpi_implement_overriding_of_arbitrary_acpi_tables_via_initrd.patch
 
 	patches.arch/srat_parsing_redo_return.patch
+	patches.arch/acpi_fix_empty_srat_mem_declarations.patch
 
 	########################################################
 	# CPUFREQ
