--- a/series.conf
+++ b/series.conf
@@ -232,6 +232,7 @@
 	patches.suse/msft-hv-0362-Drivers-hv-Change-the-hex-constant-to-a-decimal-cons.patch
 	patches.suse/msft-hv-0363-hyperv-Add-error-handling-to-rndis_filter_device_add.patch
 	patches.suse/msft-hv-0364-hyperv-Add-a-check-for-ring_size-value.patch
+	patches.suse/suse-hv-Cleanup-the-guest-ID-computation.patch
 	patches.fixes/hv-storvsc-reset-wait.patch
 
         ########################################################
