hyperv: Add support for setting MAC from within guests.

--- a/series.conf
+++ b/series.conf
@@ -228,6 +228,7 @@
 	########################################################
 	# Suse specific stuff
 	########################################################
+	patches.suse/msft-hv-0361-hyperv-Add-support-for-setting-MAC-from-within-guest.patch
 	patches.fixes/hv-storvsc-reset-wait.patch
 
         ########################################################
