--- a/series.conf
+++ b/series.conf
@@ -418,6 +418,7 @@
 	# Sound
 	##########################################################
 	patches.drivers/ALSA-hda-Fix-mute-LED-GPIO-setup-for-HP-Mini-210
+	patches.drivers/ALSA-hda-Fix-polarity-of-mute-LED-on-HP-Mini-210
 
 	########################################################
 	# Char / serial
