rpm/kernel-binary.spec.in: Add dependency on mkinitrd >= 2.7.1 (bnc#773559).

--- a/rpm/kernel-binary.spec.in
+++ b/rpm/kernel-binary.spec.in
@@ -82,7 +82,7 @@ Requires(post): module-init-tools >= 3.4
 # packages to install/update. Likewise, this is true for mkinitrd.
 # Need a perl-Bootloader with /usr/lib/bootloader/bootloader_entry
 Requires(post): perl-Bootloader >= 0.4.15
-Requires(post): mkinitrd
+Requires(post): mkinitrd >= 2.7.1
 # Install the package providing /etc/SuSE-release early enough, so that
 # the grub entry has correct title (bnc#757565)
 Requires(post): distribution-release
