Update to 3.6-rc1.  - Eliminated 11 patches.  - Rich ACLs are disabled.  - Xen is disabled.  - ARM is disabled.  - DMRAID45 is disabled.

--- a/config.conf
+++ b/config.conf
@@ -12,8 +12,8 @@
 +i386		i386/desktop
 +i386		i386/pae
 +i386 -syms	i386/debug
-+i386		i386/xen
-+i386 -syms	i386/ec2
+#+i386		i386/xen
+#+i386 -syms	i386/ec2
 +i386 		i386/vanilla
 +i386 -syms	i386/trace
 
@@ -24,8 +24,8 @@
 
 +x86_64		x86_64/default
 +x86_64		x86_64/desktop
-+x86_64		x86_64/xen
-+x86_64	-syms	x86_64/ec2
+#+x86_64		x86_64/xen
+#+x86_64	-syms	x86_64/ec2
 +x86_64	-syms	x86_64/debug
 +x86_64		x86_64/vanilla
 +x86_64 -syms	x86_64/trace
@@ -41,13 +41,13 @@
 +ppc		ppc/vanilla
 
 # ARM architectures
-+armv7hl	armv7hl/default
-+armv7hl	armv7hl/imx51
-+armv7hl	armv7hl/omap2plus
-+armv7hl	armv7hl/tegra
-+armv7hl	armv7hl/u8500
-+armv7hl	armv7hl/cubox
-+armv7hl	armv7hl/exynos
+#+armv7hl	armv7hl/default
+#+armv7hl	armv7hl/imx51
+#+armv7hl	armv7hl/omap2plus
+#+armv7hl	armv7hl/tegra
+#+armv7hl	armv7hl/u8500
+#+armv7hl	armv7hl/cubox
+#+armv7hl	armv7hl/exynos
 
 # SLES
 # identical to ppc64 flavor, all KMP packages need a kernel-default
