--- a/series.conf
+++ b/series.conf
@@ -134,8 +134,6 @@
         ########################################################
 	# powerpc/generic
         ########################################################
-	patches.suse/radeon-monitor-jsxx-quirk.patch
-
 	patches.suse/8250-sysrq-ctrl_o.patch
 +needs_update?	patches.suse/ppc-no-LDFLAGS_MODULE.patch
 	patches.arch/ppc-pegasos-console-autodetection.patch
@@ -155,7 +153,6 @@
         ########################################################
 	patches.arch/arm-phys-offset.patch
 	patches.arch/cubox-configuration.patch
-	patches.arch/arm-omap-add-drm.patch
 
 	########################################################
 	# S/390
@@ -228,10 +225,6 @@
 	########################################################
 	# Suse specific stuff
 	########################################################
-	patches.suse/msft-hv-0361-hyperv-Add-support-for-setting-MAC-from-within-guest.patch
-	patches.suse/msft-hv-0362-Drivers-hv-Change-the-hex-constant-to-a-decimal-cons.patch
-	patches.suse/msft-hv-0363-hyperv-Add-error-handling-to-rndis_filter_device_add.patch
-	patches.suse/msft-hv-0364-hyperv-Add-a-check-for-ring_size-value.patch
 	patches.suse/suse-hv-Cleanup-the-guest-ID-computation.patch
 	patches.fixes/hv-storvsc-reset-wait.patch
 
@@ -268,9 +261,7 @@
 	########################################################
 	# btrfs
 	########################################################
-
 	patches.suse/btrfs-use-correct-device-for-maps.patch
-	patches.suse/btrfs-allow-cross-subvolume-file-clone.patch
 
 	########################################################
 	# Reiserfs Patches
@@ -298,21 +289,21 @@
 	########################################################
 	# other filesystem stuff: richacls
 	########################################################
-	patches.suse/0001-vfs-Hooks-for-more-fine-grained-directory-permission.patch
-	patches.suse/0002-vfs-Add-generic-IS_ACL-test-for-acl-support.patch
-	patches.suse/0003-vfs-Add-IS_RICHACL-test-for-richacl-support.patch
-	patches.suse/0004-richacl-In-memory-representation-and-helper-function.patch
-	patches.suse/0005-richacl-Permission-mapping-functions.patch
-	patches.suse/0006-richacl-Compute-maximum-file-masks-from-an-acl.patch
-	patches.suse/0007-richacl-Update-the-file-masks-in-chmod.patch
-	patches.suse/0008-richacl-Permission-check-algorithm.patch
-	patches.suse/0009-richacl-Helper-functions-for-implementing-richacl-in.patch
-	patches.suse/0010-richacl-Create-time-inheritance.patch
-	patches.suse/0011-richacl-Check-if-an-acl-is-equivalent-to-a-file-mode.patch
-	patches.suse/0012-richacl-Automatic-Inheritance.patch
-	patches.suse/0013-richacl-Restrict-access-check-algorithm.patch
-	patches.suse/0014-richacl-xattr-mapping-functions.patch
-	patches.suse/0016-ext4-Implement-richacl-support-in-ext4.patch
++needs_update	patches.suse/0001-vfs-Hooks-for-more-fine-grained-directory-permission.patch
++needs_update	patches.suse/0002-vfs-Add-generic-IS_ACL-test-for-acl-support.patch
++needs_update	patches.suse/0003-vfs-Add-IS_RICHACL-test-for-richacl-support.patch
++needs_update	patches.suse/0004-richacl-In-memory-representation-and-helper-function.patch
++needs_update	patches.suse/0005-richacl-Permission-mapping-functions.patch
++needs_update	patches.suse/0006-richacl-Compute-maximum-file-masks-from-an-acl.patch
++needs_update	patches.suse/0007-richacl-Update-the-file-masks-in-chmod.patch
++needs_update	patches.suse/0008-richacl-Permission-check-algorithm.patch
++needs_update	patches.suse/0009-richacl-Helper-functions-for-implementing-richacl-in.patch
++needs_update	patches.suse/0010-richacl-Create-time-inheritance.patch
++needs_update	patches.suse/0011-richacl-Check-if-an-acl-is-equivalent-to-a-file-mode.patch
++needs_update	patches.suse/0012-richacl-Automatic-Inheritance.patch
++needs_update	patches.suse/0013-richacl-Restrict-access-check-algorithm.patch
++needs_update	patches.suse/0014-richacl-xattr-mapping-functions.patch
++needs_update	patches.suse/0016-ext4-Implement-richacl-support-in-ext4.patch
 
 	########################################################
 	# other filesystem stuff
@@ -336,7 +327,6 @@
 	#
 	########################################################
 	patches.drivers/spi-orion-convert-to-new-infrastructure.patch
-	patches.drivers/mach-dove-Fixup-ge00-initialisation.patch
 
 	########################################################
 	# Storage
@@ -420,10 +410,6 @@
 	##########################################################
 	# Sound
 	##########################################################
-	patches.drivers/ALSA-hda-Fix-mute-LED-GPIO-setup-for-HP-Mini-210
-	patches.drivers/ALSA-hda-Fix-polarity-of-mute-LED-on-HP-Mini-210
-	patches.drivers/ALSA-hda-Fix-mute-LED-GPIO-initialization-for-IDT-co
-	patches.drivers/ASoC-omap-Add-missing-modules-aliases-to-get-sound-w
 
 	########################################################
 	# Char / serial
@@ -449,18 +435,18 @@
 	# device-mapper
 	########################################################
 	patches.suse/dm-emulate-blkrrpart-ioctl
-	patches.suse/dm-raid45-26-Nov-2009.patch
-	patches.suse/dmraid45-dm_dirty_log_create-api-fix
-	patches.suse/dmraid45-dm_get_device-takes-fewer-arguments
-	patches.suse/dm-raid45-api-update-remove-dm_put-after-dm_table_get_md
-	patches.suse/dm-raid45-api-update-no-barriers
-	patches.suse/dm-raid45-api-2.6.39
-	patches.suse/dm-raid45-api-3.0
-	patches.suse/dm-raid45-split-dependencies
++needs_update	patches.suse/dm-raid45-26-Nov-2009.patch
++needs_update	patches.suse/dmraid45-dm_dirty_log_create-api-fix
++needs_update	patches.suse/dmraid45-dm_get_device-takes-fewer-arguments
++needs_update	patches.suse/dm-raid45-api-update-remove-dm_put-after-dm_table_get_md
++needs_update	patches.suse/dm-raid45-api-update-no-barriers
++needs_update	patches.suse/dm-raid45-api-2.6.39
++needs_update	patches.suse/dm-raid45-api-3.0
++needs_update	patches.suse/dm-raid45-split-dependencies
 	patches.fixes/dm-mpath-reattach-dh
 	patches.suse/dm-mpath-leastpending-path-update
-	patches.suse/dm-mpath-accept-failed-paths
-	patches.suse/dm-mpath-detach-existing-hardware-handler
++needs_update	patches.suse/dm-mpath-accept-failed-paths
++needs_update	patches.suse/dm-mpath-detach-existing-hardware-handler
 	patches.fixes/dm-table-switch-to-readonly
 	patches.fixes/dm-release-map_lock-before-set_disk_ro
 	patches.suse/dm-mpath-no-activate-for-offlined-paths
@@ -551,114 +537,114 @@
 # re-basing to a newer xen tree.
 #
 	# split out patches
-	patches.xen/kexec-move-segment-code-i386.patch
-	patches.xen/kexec-move-segment-code-x86_64.patch
-	patches.xen/ipv6-no-autoconf
-	patches.xen/pci-guestdev
-	patches.xen/pci-reserve
-
-	# bulk stuff, new files for xen
-	patches.xen/xen3-auto-xen-arch.diff
-	patches.xen/xen3-auto-xen-drivers.diff
-	patches.xen/xen3-auto-include-xen-interface.diff
-	patches.xen/xen3-auto-blktap2-pvops.diff
-
-	# kconfig bits for xen
-	patches.xen/xen3-auto-xen-kconfig.diff
-
-	# common code changes
-	patches.xen/xen3-auto-common.diff
-	patches.xen/xen3-auto-arch-x86.diff
-	patches.xen/xen3-auto-arch-i386.diff
-	patches.xen/xen3-auto-arch-x86_64.diff
-
-	# fixups due to upstream Xen parts
-	patches.xen/xen3-fixup-xen
-
-	# newer changeset backports
-
-	# changes outside arch/{i386,x86_64}/xen
-	patches.xen/xen3-fixup-kconfig
-	patches.xen/xen3-fixup-common
-	patches.xen/xen3-fixup-arch-x86
-	patches.xen/xen3-fixup-blktap2-pvops
-
-	# ports of other patches
-	patches.xen/xen3-patch-2.6.18
-	patches.xen/xen3-patch-2.6.19
-	patches.xen/xen3-patch-2.6.20
-	patches.xen/xen3-patch-2.6.21
-	patches.xen/xen3-patch-2.6.22
-	patches.xen/xen3-patch-2.6.23
-	patches.xen/xen3-patch-2.6.24
-	patches.xen/xen3-patch-2.6.25
-	patches.xen/xen3-patch-2.6.26
-	patches.xen/xen3-patch-2.6.27
-	patches.xen/xen3-patch-2.6.28
-	patches.xen/xen3-patch-2.6.29
-	patches.xen/xen3-patch-2.6.30
-	patches.xen/xen3-patch-2.6.31
-	patches.xen/xen3-patch-2.6.32
-	patches.xen/xen3-patch-2.6.33
-	patches.xen/xen3-patch-2.6.34
-	patches.xen/xen3-patch-2.6.35
-	patches.xen/xen3-patch-2.6.36
-	patches.xen/xen3-patch-2.6.37
-	patches.xen/xen3-patch-2.6.38
-	patches.xen/xen3-patch-2.6.39
-	patches.xen/xen3-patch-3.0
-	patches.xen/xen3-patch-3.1
-	patches.xen/xen3-patch-3.2
-	patches.xen/xen3-patch-3.3
-	patches.xen/xen3-patch-3.4
-	patches.xen/xen3-patch-3.5
-	patches.xen/xen3-acpi_implement_overriding_of_arbitrary_acpi_tables_via_initrd.patch
-	patches.xen/xen3-stack-unwind
-	patches.xen/xen3-x86_64-unwind-annotations
-
-	# bugfixes and enhancements
-	patches.xen/xen-kconfig-compat
-	patches.xen/xen-sys-suspend
-	patches.xen/xen-ipi-per-cpu-irq
-	patches.xen/xen-virq-per-cpu-irq
-	patches.xen/xen-clockevents
-	patches.xen/xen-spinlock-poll-early
-	patches.xen/xen-pcpu-hotplug
-	patches.xen/xen-pcpu-hotplug-kexec
-	patches.xen/xen-mem-hotplug
-	patches.xen/xen-swiotlb-heuristics
-	patches.xen/xen-configurable-guest-devices
-	patches.xen/xen-setup-gsi
-	patches.xen/xen-sections
-	patches.xen/xen-unpriv-build
-	patches.xen/xen-cpufreq-report
-	patches.xen/xen-balloon-max-target
-	patches.xen/xen-blkif-protocol-fallback-hack
-	patches.xen/xen-blkback-cdrom
-	patches.xen/xen-blktap-modular
-	patches.xen/xen-blktap-write-barriers
-	patches.xen/xen-blktap2-configurable-nr-devs
-	patches.xen/xen-blkif-op-packet
-	patches.xen/xen-blkfront-cdrom
-	patches.xen/xen-blkfront-hvm-no-cdrom
-	patches.xen/xen-netback-nr-irqs
-	patches.xen/xen-netback-notify-multi
-	patches.xen/xen-netback-generalize
-	patches.xen/xen-netback-multiple-tasklets
-	patches.xen/xen-netback-kernel-threads
-	patches.xen/xen-cxgb3
-	patches.xen/xen-dcdbas
-	patches.xen/xen-x86-panic-no-reboot
-	patches.xen/xen-x86-dcr-fallback
-	patches.xen/xen-x86-no-lapic
-	patches.xen/xen-x86-pmd-handling
-	patches.xen/xen-x86-bigmem
-	patches.xen/xen-x86-exit-mmap
-	patches.xen/xen-x86-per-cpu-vcpu-info
-	patches.xen/xen-x86-pcpu
-	patches.xen/xen-x86-EFI
-	patches.xen/xen-x86_64-pgd-pin
-	patches.xen/xen-x86_64-pgd-alloc-order
-	patches.xen/xen-x86_64-dump-user-pgt
-	patches.xen/xen-x86_64-note-init-p2m
-	patches.xen/xen-x86_64-unmapped-initrd
++xen_needs_update	patches.xen/kexec-move-segment-code-i386.patch
++xen_needs_update	patches.xen/kexec-move-segment-code-x86_64.patch
++xen_needs_update	patches.xen/ipv6-no-autoconf
++xen_needs_update	patches.xen/pci-guestdev
++xen_needs_update	patches.xen/pci-reserve
++xen_needs_update
++xen_needs_update	# bulk stuff, new files for xen
++xen_needs_update	patches.xen/xen3-auto-xen-arch.diff
++xen_needs_update	patches.xen/xen3-auto-xen-drivers.diff
++xen_needs_update	patches.xen/xen3-auto-include-xen-interface.diff
++xen_needs_update	patches.xen/xen3-auto-blktap2-pvops.diff
++xen_needs_update
++xen_needs_update	# kconfig bits for xen
++xen_needs_update	patches.xen/xen3-auto-xen-kconfig.diff
++xen_needs_update
++xen_needs_update	# common code changes
++xen_needs_update	patches.xen/xen3-auto-common.diff
++xen_needs_update	patches.xen/xen3-auto-arch-x86.diff
++xen_needs_update	patches.xen/xen3-auto-arch-i386.diff
++xen_needs_update	patches.xen/xen3-auto-arch-x86_64.diff
++xen_needs_update
++xen_needs_update	# fixups due to upstream Xen parts
++xen_needs_update	patches.xen/xen3-fixup-xen
++xen_needs_update
++xen_needs_update	# newer changeset backports
++xen_needs_update
++xen_needs_update	# changes outside arch/{i386,x86_64}/xen
++xen_needs_update	patches.xen/xen3-fixup-kconfig
++xen_needs_update	patches.xen/xen3-fixup-common
++xen_needs_update	patches.xen/xen3-fixup-arch-x86
++xen_needs_update	patches.xen/xen3-fixup-blktap2-pvops
++xen_needs_update
++xen_needs_update	# ports of other patches
++xen_needs_update	patches.xen/xen3-patch-2.6.18
++xen_needs_update	patches.xen/xen3-patch-2.6.19
++xen_needs_update	patches.xen/xen3-patch-2.6.20
++xen_needs_update	patches.xen/xen3-patch-2.6.21
++xen_needs_update	patches.xen/xen3-patch-2.6.22
++xen_needs_update	patches.xen/xen3-patch-2.6.23
++xen_needs_update	patches.xen/xen3-patch-2.6.24
++xen_needs_update	patches.xen/xen3-patch-2.6.25
++xen_needs_update	patches.xen/xen3-patch-2.6.26
++xen_needs_update	patches.xen/xen3-patch-2.6.27
++xen_needs_update	patches.xen/xen3-patch-2.6.28
++xen_needs_update	patches.xen/xen3-patch-2.6.29
++xen_needs_update	patches.xen/xen3-patch-2.6.30
++xen_needs_update	patches.xen/xen3-patch-2.6.31
++xen_needs_update	patches.xen/xen3-patch-2.6.32
++xen_needs_update	patches.xen/xen3-patch-2.6.33
++xen_needs_update	patches.xen/xen3-patch-2.6.34
++xen_needs_update	patches.xen/xen3-patch-2.6.35
++xen_needs_update	patches.xen/xen3-patch-2.6.36
++xen_needs_update	patches.xen/xen3-patch-2.6.37
++xen_needs_update	patches.xen/xen3-patch-2.6.38
++xen_needs_update	patches.xen/xen3-patch-2.6.39
++xen_needs_update	patches.xen/xen3-patch-3.0
++xen_needs_update	patches.xen/xen3-patch-3.1
++xen_needs_update	patches.xen/xen3-patch-3.2
++xen_needs_update	patches.xen/xen3-patch-3.3
++xen_needs_update	patches.xen/xen3-patch-3.4
++xen_needs_update	patches.xen/xen3-patch-3.5
++xen_needs_update	patches.xen/xen3-acpi_implement_overriding_of_arbitrary_acpi_tables_via_initrd.patch
++xen_needs_update	patches.xen/xen3-stack-unwind
++xen_needs_update	patches.xen/xen3-x86_64-unwind-annotations
++xen_needs_update
++xen_needs_update	# bugfixes and enhancements
++xen_needs_update	patches.xen/xen-kconfig-compat
++xen_needs_update	patches.xen/xen-sys-suspend
++xen_needs_update	patches.xen/xen-ipi-per-cpu-irq
++xen_needs_update	patches.xen/xen-virq-per-cpu-irq
++xen_needs_update	patches.xen/xen-clockevents
++xen_needs_update	patches.xen/xen-spinlock-poll-early
++xen_needs_update	patches.xen/xen-pcpu-hotplug
++xen_needs_update	patches.xen/xen-pcpu-hotplug-kexec
++xen_needs_update	patches.xen/xen-mem-hotplug
++xen_needs_update	patches.xen/xen-swiotlb-heuristics
++xen_needs_update	patches.xen/xen-configurable-guest-devices
++xen_needs_update	patches.xen/xen-setup-gsi
++xen_needs_update	patches.xen/xen-sections
++xen_needs_update	patches.xen/xen-unpriv-build
++xen_needs_update	patches.xen/xen-cpufreq-report
++xen_needs_update	patches.xen/xen-balloon-max-target
++xen_needs_update	patches.xen/xen-blkif-protocol-fallback-hack
++xen_needs_update	patches.xen/xen-blkback-cdrom
++xen_needs_update	patches.xen/xen-blktap-modular
++xen_needs_update	patches.xen/xen-blktap-write-barriers
++xen_needs_update	patches.xen/xen-blktap2-configurable-nr-devs
++xen_needs_update	patches.xen/xen-blkif-op-packet
++xen_needs_update	patches.xen/xen-blkfront-cdrom
++xen_needs_update	patches.xen/xen-blkfront-hvm-no-cdrom
++xen_needs_update	patches.xen/xen-netback-nr-irqs
++xen_needs_update	patches.xen/xen-netback-notify-multi
++xen_needs_update	patches.xen/xen-netback-generalize
++xen_needs_update	patches.xen/xen-netback-multiple-tasklets
++xen_needs_update	patches.xen/xen-netback-kernel-threads
++xen_needs_update	patches.xen/xen-cxgb3
++xen_needs_update	patches.xen/xen-dcdbas
++xen_needs_update	patches.xen/xen-x86-panic-no-reboot
++xen_needs_update	patches.xen/xen-x86-dcr-fallback
++xen_needs_update	patches.xen/xen-x86-no-lapic
++xen_needs_update	patches.xen/xen-x86-pmd-handling
++xen_needs_update	patches.xen/xen-x86-bigmem
++xen_needs_update	patches.xen/xen-x86-exit-mmap
++xen_needs_update	patches.xen/xen-x86-per-cpu-vcpu-info
++xen_needs_update	patches.xen/xen-x86-pcpu
++xen_needs_update	patches.xen/xen-x86-EFI
++xen_needs_update	patches.xen/xen-x86_64-pgd-pin
++xen_needs_update	patches.xen/xen-x86_64-pgd-alloc-order
++xen_needs_update	patches.xen/xen-x86_64-dump-user-pgt
++xen_needs_update	patches.xen/xen-x86_64-note-init-p2m
++xen_needs_update	patches.xen/xen-x86_64-unmapped-initrd
