Updated and re-enabled richacl support.

--- a/series.conf
+++ b/series.conf
@@ -289,21 +289,21 @@
 	########################################################
 	# other filesystem stuff: richacls
 	########################################################
-+needs_update	patches.suse/0001-vfs-Hooks-for-more-fine-grained-directory-permission.patch
-+needs_update	patches.suse/0002-vfs-Add-generic-IS_ACL-test-for-acl-support.patch
-+needs_update	patches.suse/0003-vfs-Add-IS_RICHACL-test-for-richacl-support.patch
-+needs_update	patches.suse/0004-richacl-In-memory-representation-and-helper-function.patch
-+needs_update	patches.suse/0005-richacl-Permission-mapping-functions.patch
-+needs_update	patches.suse/0006-richacl-Compute-maximum-file-masks-from-an-acl.patch
-+needs_update	patches.suse/0007-richacl-Update-the-file-masks-in-chmod.patch
-+needs_update	patches.suse/0008-richacl-Permission-check-algorithm.patch
-+needs_update	patches.suse/0009-richacl-Helper-functions-for-implementing-richacl-in.patch
-+needs_update	patches.suse/0010-richacl-Create-time-inheritance.patch
-+needs_update	patches.suse/0011-richacl-Check-if-an-acl-is-equivalent-to-a-file-mode.patch
-+needs_update	patches.suse/0012-richacl-Automatic-Inheritance.patch
-+needs_update	patches.suse/0013-richacl-Restrict-access-check-algorithm.patch
-+needs_update	patches.suse/0014-richacl-xattr-mapping-functions.patch
-+needs_update	patches.suse/0016-ext4-Implement-richacl-support-in-ext4.patch
+	patches.suse/0001-vfs-Hooks-for-more-fine-grained-directory-permission.patch
+	patches.suse/0002-vfs-Add-generic-IS_ACL-test-for-acl-support.patch
+	patches.suse/0003-vfs-Add-IS_RICHACL-test-for-richacl-support.patch
+	patches.suse/0004-richacl-In-memory-representation-and-helper-function.patch
+	patches.suse/0005-richacl-Permission-mapping-functions.patch
+	patches.suse/0006-richacl-Compute-maximum-file-masks-from-an-acl.patch
+	patches.suse/0007-richacl-Update-the-file-masks-in-chmod.patch
+	patches.suse/0008-richacl-Permission-check-algorithm.patch
+	patches.suse/0009-richacl-Helper-functions-for-implementing-richacl-in.patch
+	patches.suse/0010-richacl-Create-time-inheritance.patch
+	patches.suse/0011-richacl-Check-if-an-acl-is-equivalent-to-a-file-mode.patch
+	patches.suse/0012-richacl-Automatic-Inheritance.patch
+	patches.suse/0013-richacl-Restrict-access-check-algorithm.patch
+	patches.suse/0014-richacl-xattr-mapping-functions.patch
+	patches.suse/0016-ext4-Implement-richacl-support-in-ext4.patch
 
 	########################################################
 	# other filesystem stuff
