Updated and re-enabled DMRAID45.

--- a/series.conf
+++ b/series.conf
@@ -435,14 +435,14 @@
 	# device-mapper
 	########################################################
 	patches.suse/dm-emulate-blkrrpart-ioctl
-+needs_update	patches.suse/dm-raid45-26-Nov-2009.patch
-+needs_update	patches.suse/dmraid45-dm_dirty_log_create-api-fix
-+needs_update	patches.suse/dmraid45-dm_get_device-takes-fewer-arguments
-+needs_update	patches.suse/dm-raid45-api-update-remove-dm_put-after-dm_table_get_md
-+needs_update	patches.suse/dm-raid45-api-update-no-barriers
-+needs_update	patches.suse/dm-raid45-api-2.6.39
-+needs_update	patches.suse/dm-raid45-api-3.0
-+needs_update	patches.suse/dm-raid45-split-dependencies
+	patches.suse/dm-raid45-26-Nov-2009.patch
+	patches.suse/dmraid45-dm_dirty_log_create-api-fix
+	patches.suse/dmraid45-dm_get_device-takes-fewer-arguments
+	patches.suse/dm-raid45-api-update-remove-dm_put-after-dm_table_get_md
+	patches.suse/dm-raid45-api-update-no-barriers
+	patches.suse/dm-raid45-api-2.6.39
+	patches.suse/dm-raid45-api-3.0
+	patches.suse/dm-raid45-split-dependencies
 	patches.fixes/dm-mpath-reattach-dh
 	patches.suse/dm-mpath-leastpending-path-update
 +needs_update	patches.suse/dm-mpath-accept-failed-paths
