ASoC: omap: Add missing modules aliases to get sound working on omap devices.

--- a/series.conf
+++ b/series.conf
@@ -422,6 +422,7 @@
 	patches.drivers/ALSA-hda-Fix-mute-LED-GPIO-setup-for-HP-Mini-210
 	patches.drivers/ALSA-hda-Fix-polarity-of-mute-LED-on-HP-Mini-210
 	patches.drivers/ALSA-hda-Fix-mute-LED-GPIO-initialization-for-IDT-co
+	patches.drivers/ASoC-omap-Add-missing-modules-aliases-to-get-sound-w
 
 	########################################################
 	# Char / serial
