reiserfs: fix deadlock with nfs racing on create/lookup (bnc#762693).

--- a/series.conf
+++ b/series.conf
@@ -275,6 +275,7 @@
 	########################################################
 +needs_updating-39	patches.suse/reiser4-dependencies
 	patches.fixes/reiserfs-fix-deadlock-in-quota-code
+	patches.fixes/reiserfs-fix-deadlock-with-nfs-racing-on-create-lookup
 
 	########################################################
 	# dlm
