- Linux 3.5.1. - Delete   patches.drivers/ALSA-hda-Fix-mute-LED-GPIO-initialization-for-IDT-co. - Delete   patches.drivers/ALSA-hda-Fix-mute-LED-GPIO-setup-for-HP-Mini-210. - Delete   patches.drivers/ALSA-hda-Fix-polarity-of-mute-LED-on-HP-Mini-210.

--- a/series.conf
+++ b/series.conf
@@ -27,6 +27,7 @@
 	# DO NOT MODIFY THEM!
 	# Send separate patches upstream if you find a problem...
 	########################################################
+	patches.kernel.org/patch-3.5.1
 
         ########################################################
         # Build fixes that apply to the vanilla kernel too.
@@ -417,9 +418,6 @@
 	##########################################################
 	# Sound
 	##########################################################
-	patches.drivers/ALSA-hda-Fix-mute-LED-GPIO-setup-for-HP-Mini-210
-	patches.drivers/ALSA-hda-Fix-polarity-of-mute-LED-on-HP-Mini-210
-	patches.drivers/ALSA-hda-Fix-mute-LED-GPIO-initialization-for-IDT-co
 	patches.drivers/ASoC-omap-Add-missing-modules-aliases-to-get-sound-w
 
 	########################################################
