ubifs: remove __DATE__ and __TIME__.

--- a/series.conf
+++ b/series.conf
@@ -37,6 +37,7 @@
 	patches.rpmify/nouveau-make-vga_switcheroo-code-depend-on-vga_switcheroo
 	patches.rpmify/pti-depends-on-x86-pci
 	patches.rpmify/geode-depends-on-x86_32
+	patches.rpmify/ubifs-remove-DATE-TIME.patch
 
         ########################################################
         # kABI consistency patches
