printk: Fix calculation of length used to discard records.

--- a/series.conf
+++ b/series.conf
@@ -78,6 +78,7 @@
         # Scheduler / Core
         ########################################################
 	patches.suse/setuid-dumpable-wrongdir
+	patches.fixes/printk-fix-calculation-of-length-used-to-discard-records
 
         ########################################################
         # Architecture-specific patches. These used to be all
