--- a/series.conf
+++ b/series.conf
@@ -29,6 +29,7 @@
 	########################################################
 	patches.kernel.org/patch-3.5.1
 	patches.kernel.org/patch-3.5.1-2
+	patches.kernel.org/patch-3.5.2-3
 
         ########################################################
         # Build fixes that apply to the vanilla kernel too.
