--- a/series.conf
+++ b/series.conf
@@ -38,6 +38,7 @@
 	patches.rpmify/pti-depends-on-x86-pci
 	patches.rpmify/geode-depends-on-x86_32
 	patches.rpmify/ubifs-remove-DATE-TIME.patch
+	patches.rpmify/clk-h-fix-shim-ifdef-guard-have_clk-common_clk
 
         ########################################################
         # kABI consistency patches
