identify Virtual PC guests in ata_piix (bnc#737532).

--- a/series.conf
+++ b/series.conf
@@ -224,6 +224,7 @@
 	# Suse specific stuff
 	########################################################
 	patches.suse/suse-hv-Cleanup-the-guest-ID-computation.patch
+	patches.suse/suse-hv-identify-virtual-pc-in-ata_piix.patch
 	patches.fixes/hv-storvsc-reset-wait.patch
 
         ########################################################
