- Linux 3.5.4. - Refresh patches.suse/scsi-error-test-unit-ready-timeout. - Delete   patches.fixes/i2c-busses-fix-build-error-if-config_i2c_designware_platform-y-config_i2c_design. - Update config files.

--- a/series.conf
+++ b/series.conf
@@ -30,6 +30,7 @@
 	patches.kernel.org/patch-3.5.1
 	patches.kernel.org/patch-3.5.1-2
 	patches.kernel.org/patch-3.5.2-3
+	patches.kernel.org/patch-3.5.3-4
 
         ########################################################
         # Build fixes that apply to the vanilla kernel too.
@@ -410,7 +411,6 @@
 	########################################################
 	# I2C
 	########################################################
-	patches.fixes/i2c-busses-fix-build-error-if-config_i2c_designware_platform-y-config_i2c_design
 
 	########################################################
 	# Input & Console
