rpm/kernel-binary.spec.in: avoid fixdep compilation error
Let's see if it helps.

--- a/rpm/kernel-binary.spec.in
+++ b/rpm/kernel-binary.spec.in
@@ -317,6 +317,8 @@ fi
 %endif
 
 while true; do
+    make %{?_smp_mflags} scripts $MAKE_ARGS CONFIG_DEBUG_SECTION_MISMATCH=y \
+	2>&1 | tee buildlog
     make %{?_smp_mflags} all $MAKE_ARGS CONFIG_DEBUG_SECTION_MISMATCH=y 2>&1 \
         | tee buildlog
     if test "${PIPESTATUS[0]}" -eq 0; then
