Update to 3.6-rc6. - Eliminated 1 patch.
patches.arch/arm-phys-offset.patch needs review.

--- a/series.conf
+++ b/series.conf
@@ -39,7 +39,6 @@
 	patches.rpmify/geode-depends-on-x86_32
 	patches.rpmify/ubifs-remove-DATE-TIME.patch
 	patches.rpmify/chipidea-clean-up-dependencies
-	patches.rpmify/i2c-busses-fix-build-error-if-config_i2c_designware_platform-y-config_i2c_design
 
         ########################################################
         # kABI consistency patches
@@ -152,7 +151,7 @@
         ########################################################
         # ARM
         ########################################################
-	patches.arch/arm-phys-offset.patch
++agraf	patches.arch/arm-phys-offset.patch
 	patches.arch/cubox-configuration.patch
 
 	########################################################
