Makefile: Fix scripts_basic / archscripts build order.

--- a/series.conf
+++ b/series.conf
@@ -39,6 +39,7 @@
 	patches.rpmify/geode-depends-on-x86_32
 	patches.rpmify/ubifs-remove-DATE-TIME.patch
 	patches.rpmify/chipidea-clean-up-dependencies
+	patches.rpmify/makefile-fix-scripts_basic-archscripts-build-order
 
         ########################################################
         # kABI consistency patches
