net: do not disable sg for packets requiring no checksum (bnc#774859).

--- a/series.conf
+++ b/series.conf
@@ -385,6 +385,7 @@
 	patches.drivers/sfc-Fix-maximum-number-of-TSO-segments-and-minimum-T.patch
 	patches.drivers/tcp-Apply-device-TSO-segment-limit-earlier.patch
 	patches.fixes/af_netlink-force-credentials-passing-CVE-2012-3520.patch
+	patches.fixes/net-do-not-disable-sg-for-packets-requiring-no-check.patch
 
 	########################################################
 	# Wireless Networking
