overlayfs: create new inode in ovl_link.

--- a/series.conf
+++ b/series.conf
@@ -325,6 +325,7 @@
 	patches.suse/ovl07-overlay-overlay-filesystem-documentation.patch
 	patches.suse/ovl08-fs-limit-filesystem-stacking-depth.patch
 	patches.suse/ovl09-overlayfs-fix-possible-leak-in-ovl_new_inode.patch
+	patches.suse/ovl10-overlayfs-create-new-inode-in-ovl_link.patch
 
 	########################################################
 	# Swap-over-NFS
