--- a/series.conf
+++ b/series.conf
@@ -319,6 +319,7 @@
 	patches.suse/ovl01-vfs-add-i_op-dentry_open.patch
 	patches.suse/ovl02-vfs-export-do_splice_direct-to-modules.patch
 	patches.suse/ovl03-vfs-introduce-clone_private_mount.patch
+	patches.suse/ovl04-overlay-filesystem.patch
 
 	########################################################
 	# Swap-over-NFS
