overlay: overlay filesystem documentation.

--- a/series.conf
+++ b/series.conf
@@ -322,6 +322,7 @@
 	patches.suse/ovl04-overlay-filesystem.patch
 	patches.suse/ovl05-overlayfs-add-statfs-support.patch
 	patches.suse/ovl06-overlayfs-implement-show_options.patch
+	patches.suse/ovl07-overlay-overlay-filesystem-documentation.patch
 
 	########################################################
 	# Swap-over-NFS
