--- a/series.conf
+++ b/series.conf
@@ -318,6 +318,7 @@
 
 	patches.suse/ovl01-vfs-add-i_op-dentry_open.patch
 	patches.suse/ovl02-vfs-export-do_splice_direct-to-modules.patch
+	patches.suse/ovl03-vfs-introduce-clone_private_mount.patch
 
 	########################################################
 	# Swap-over-NFS
