vfs: add i_op->dentry_open().

--- a/series.conf
+++ b/series.conf
@@ -313,6 +313,12 @@
 	patches.fixes/hfs-avoid-crash-in-hfs_bnode_create
 
 	########################################################
+	# Overlayfs
+	########################################################
+
+	patches.suse/ovl01-vfs-add-i_op-dentry_open.patch
+
+	########################################################
 	# Swap-over-NFS
 	########################################################
 
