overlayfs: fix possible leak in ovl_new_inode.

--- a/series.conf
+++ b/series.conf
@@ -324,6 +324,7 @@
 	patches.suse/ovl06-overlayfs-implement-show_options.patch
 	patches.suse/ovl07-overlay-overlay-filesystem-documentation.patch
 	patches.suse/ovl08-fs-limit-filesystem-stacking-depth.patch
+	patches.suse/ovl09-overlayfs-fix-possible-leak-in-ovl_new_inode.patch
 
 	########################################################
 	# Swap-over-NFS
