fs: limit filesystem stacking depth.

--- a/series.conf
+++ b/series.conf
@@ -323,6 +323,7 @@
 	patches.suse/ovl05-overlayfs-add-statfs-support.patch
 	patches.suse/ovl06-overlayfs-implement-show_options.patch
 	patches.suse/ovl07-overlay-overlay-filesystem-documentation.patch
+	patches.suse/ovl08-fs-limit-filesystem-stacking-depth.patch
 
 	########################################################
 	# Swap-over-NFS
