ovl: switch to __inode_permission().

--- a/series.conf
+++ b/series.conf
@@ -327,6 +327,7 @@
 	patches.suse/ovl09-overlayfs-fix-possible-leak-in-ovl_new_inode.patch
 	patches.suse/ovl10-overlayfs-create-new-inode-in-ovl_link.patch
 	patches.suse/ovl11-vfs-export-__inode_permission-to-modules.patch
+	patches.suse/ovl12-ovl-switch-to-__inode_permission.patch
 
 	########################################################
 	# Swap-over-NFS
