vfs: export do_splice_direct() to modules.

--- a/series.conf
+++ b/series.conf
@@ -317,6 +317,7 @@
 	########################################################
 
 	patches.suse/ovl01-vfs-add-i_op-dentry_open.patch
+	patches.suse/ovl02-vfs-export-do_splice_direct-to-modules.patch
 
 	########################################################
 	# Swap-over-NFS
