--- a/series.conf
+++ b/series.conf
@@ -326,6 +326,7 @@
 	patches.suse/ovl08-fs-limit-filesystem-stacking-depth.patch
 	patches.suse/ovl09-overlayfs-fix-possible-leak-in-ovl_new_inode.patch
 	patches.suse/ovl10-overlayfs-create-new-inode-in-ovl_link.patch
+	patches.suse/ovl11-vfs-export-__inode_permission-to-modules.patch
 
 	########################################################
 	# Swap-over-NFS
