overlayfs: copy up i_uid/i_gid from the underlying inode.

--- a/series.conf
+++ b/series.conf
@@ -328,6 +328,7 @@
 	patches.suse/ovl10-overlayfs-create-new-inode-in-ovl_link.patch
 	patches.suse/ovl11-vfs-export-__inode_permission-to-modules.patch
 	patches.suse/ovl12-ovl-switch-to-__inode_permission.patch
+	patches.suse/ovl13-overlayfs-copy-up-i_uid-i_gid-from-the-underlying-in.patch
 
 	########################################################
 	# Swap-over-NFS
