overlayfs: add statfs support.

--- a/series.conf
+++ b/series.conf
@@ -320,6 +320,7 @@
 	patches.suse/ovl02-vfs-export-do_splice_direct-to-modules.patch
 	patches.suse/ovl03-vfs-introduce-clone_private_mount.patch
 	patches.suse/ovl04-overlay-filesystem.patch
+	patches.suse/ovl05-overlayfs-add-statfs-support.patch
 
 	########################################################
 	# Swap-over-NFS
