--- a/series.conf
+++ b/series.conf
@@ -204,6 +204,7 @@
 
 	patches.arch/lib_earlycpio.patch
 	patches.arch/x86_introduce_reserve_mem_area.patch
+	patches.arch/acpi_override_2_2.patch
 
 	########################################################
 	# CPUFREQ
