--- a/series.conf
+++ b/series.conf
@@ -202,6 +202,8 @@
 +trenn	patches.arch/acpica_fix_wrongly_mapped_acpi_table_header_when_overriding_via_initrd.patch
 +trenn	patches.arch/acpi_implement_overriding_of_arbitrary_acpi_tables_via_initrd.patch
 
+	patches.arch/lib_earlycpio.patch
+
 	########################################################
 	# CPUFREQ
 	########################################################
