X86 ACPI: Introduce x86 arch specific arch_reserve_mem_area() for e820 handling.

--- a/series.conf
+++ b/series.conf
@@ -203,6 +203,7 @@
 +trenn	patches.arch/acpi_implement_overriding_of_arbitrary_acpi_tables_via_initrd.patch
 
 	patches.arch/lib_earlycpio.patch
+	patches.arch/x86_introduce_reserve_mem_area.patch
 
 	########################################################
 	# CPUFREQ
