ACPI: Only allow users with CAP_SYS_RAWIO rights to overwrite ACPI funcs at runtime.

--- a/series.conf
+++ b/series.conf
@@ -208,6 +208,7 @@
 	patches.arch/acpi_physical_override.patch
 	patches.arch/acpi_override_introduce_taint_func.patch
 	patches.arch/acpi_override_documentation
+	patches.arch/acpi_fix_custom_method_acc.patch
 
 	########################################################
 	# CPUFREQ
