ACPI: Document ACPI table overriding via initrd.

--- a/series.conf
+++ b/series.conf
@@ -207,6 +207,7 @@
 	patches.arch/acpi_override_2_2.patch
 	patches.arch/acpi_physical_override.patch
 	patches.arch/acpi_override_introduce_taint_func.patch
+	patches.arch/acpi_override_documentation
 
 	########################################################
 	# CPUFREQ
