ARM/u5800: Fix build of ux500 driver
Acked-by: Jeff Mahoney <jeffm@suse.com>

--- a/series.conf
+++ b/series.conf
@@ -152,6 +152,7 @@
         # ARM
         ########################################################
 	patches.arch/cubox-configuration.patch
+	patches.arch/arm-fix-build-ux500-module.diff
 
 	########################################################
 	# S/390
