--- a/series.conf
+++ b/series.conf
@@ -648,14 +648,14 @@
 	patches.xen/xen3-patch-3.3
 	patches.xen/xen3-patch-3.4
 	patches.xen/xen3-patch-3.5
-	patches.xen/xen3-patch-3.6-rc4
+	patches.xen/xen3-patch-3.6
 
 	# ports of other patches
+	patches.xen/xen3-acpi_override_2_2.patch
 	patches.xen/xen3-stack-unwind
 	patches.xen/xen3-x86_64-unwind-annotations
 
 	# bugfixes and enhancements
-	patches.xen/xen-kconfig-compat
 	patches.xen/xen-sys-suspend
 	patches.xen/xen-ipi-per-cpu-irq
 	patches.xen/xen-virq-per-cpu-irq
