rpm/kernel-binary.spec.in: add Conflicht: hyper-v < 4 to make sure the daemon is in sync with the kernel (bnc#770763 , fate#314441)

--- a/rpm/kernel-binary.spec.in
+++ b/rpm/kernel-binary.spec.in
@@ -127,6 +127,8 @@ Conflicts:      apparmor-parser < 2.3
 Conflicts:      udev < 118
 Conflicts:      lvm2 < 2.02.33
 %endif
+# Interface to hv_kvp_daemon changed
+Conflicts:      hyper-v < 4
 %ifarch %ix86
 Conflicts:      libc.so.6()(64bit)
 %endif
