--- a/series.conf
+++ b/series.conf
@@ -28,6 +28,7 @@
 	# Send separate patches upstream if you find a problem...
 	########################################################
 	patches.kernel.org/patch-3.6.1
+	patches.kernel.org/patch-3.6.1-2
 
         ########################################################
         # Build fixes that apply to the vanilla kernel too.
