--- a/series.conf
+++ b/series.conf
@@ -41,6 +41,7 @@
 	patches.rpmify/geode-depends-on-x86_32
 	patches.rpmify/ubifs-remove-DATE-TIME.patch
 	patches.rpmify/chipidea-clean-up-dependencies
+	patches.rpmify/x86-kbuild-archscripts-depends-on-scripts_basic
 
         ########################################################
         # kABI consistency patches
