rpm/kernel-binary.spec.in: Also check for /etc/IGNORE-KABI-BADNESS file
This allows to control the kabi checker from outside of the package.

--- a/rpm/kernel-binary.spec.in
+++ b/rpm/kernel-binary.spec.in
@@ -608,7 +608,8 @@ if [ %CONFIG_MODULES = y ]; then
     fi
     if [ $res -ne 0 ]; then
 	if [ ! -e %my_builddir/kabi/%cpu_arch/ignore-%build_flavor -a \
-	     ! -e %_sourcedir/IGNORE-KABI-BADNESS ]; then
+	     ! -e %_sourcedir/IGNORE-KABI-BADNESS -a \
+	     ! -e /etc/IGNORE-KABI-BADNESS ]; then
 	    echo "Create a file IGNORE-KABI-BADNESS in the kernel-source" \
 		 "directory to build this kernel even though its badness is" \
 		 "higher than allowed for an official kernel."
