rpm/kernel-binary.spec.in: Use a macro instead of /etc/IGNORE-KABI-BADNESS

--- a/rpm/kernel-binary.spec.in
+++ b/rpm/kernel-binary.spec.in
@@ -607,9 +607,11 @@ if [ %CONFIG_MODULES = y ]; then
             Module.symvers || res=$?
     fi
     if [ $res -ne 0 ]; then
-	if [ ! -e %my_builddir/kabi/%cpu_arch/ignore-%build_flavor -a \
-	     ! -e %_sourcedir/IGNORE-KABI-BADNESS -a \
-	     ! -e /etc/IGNORE-KABI-BADNESS ]; then
+	# %ignore_kabi_badness is defined in the Kernel:* projects in the
+	# OBS to be able to build the KOTD in spite of kabi errors
+	if [ 0%{?ignore_kabi_badness} -eq 0 -a \
+	     ! -e %my_builddir/kabi/%cpu_arch/ignore-%build_flavor -a \
+	     ! -e %_sourcedir/IGNORE-KABI-BADNESS ]; then
 	    echo "Create a file IGNORE-KABI-BADNESS in the kernel-source" \
 		 "directory to build this kernel even though its badness is" \
 		 "higher than allowed for an official kernel."
