- Linux 3.6.3. - Refresh patches.xen/xen3-fixup-xen. - Refresh patches.xen/xen3-patch-2.6.23. - Refresh patches.xen/xen3-patch-3.2. - Refresh patches.xen/xen3-patch-3.6. - Delete patches.fixes/hv-storvsc-reset-wait.patch. - Delete   patches.rpmify/x86-kbuild-archscripts-depends-on-scripts_basic.

--- a/series.conf
+++ b/series.conf
@@ -29,6 +29,7 @@
 	########################################################
 	patches.kernel.org/patch-3.6.1
 	patches.kernel.org/patch-3.6.1-2
+	patches.kernel.org/patch-3.6.2-3
 
         ########################################################
         # Build fixes that apply to the vanilla kernel too.
@@ -41,7 +42,6 @@
 	patches.rpmify/geode-depends-on-x86_32
 	patches.rpmify/ubifs-remove-DATE-TIME.patch
 	patches.rpmify/chipidea-clean-up-dependencies
-	patches.rpmify/x86-kbuild-archscripts-depends-on-scripts_basic
 
         ########################################################
         # kABI consistency patches
@@ -263,7 +263,6 @@
 	patches.suse/msft-hv-0402-hyperv-Report-actual-status-in-receive-completion-pa.patch
 	patches.suse/msft-hv-0403-hyperv-Add-buffer-for-extended-info-after-the-RNDIS-.patch
 	patches.suse/suse-hv-identify-virtual-pc-in-ata_piix.patch
-	patches.fixes/hv-storvsc-reset-wait.patch
 
         ########################################################
         # Networking, IPv6
