- ARM: Exynos: Fix MMC driver - ARM: Exynos: Update configs

--- a/series.conf
+++ b/series.conf
@@ -152,6 +152,8 @@
         ########################################################
 	patches.arch/cubox-configuration.patch
 	patches.arch/arm-fix-build-ux500-module.diff
+	patches.arch/arm-exynos-nosparse.patch
+	patches.arch/arm-origen-regulator.patch
 
 	########################################################
 	# S/390
