- ARM: Update config files.

--- a/config.conf
+++ b/config.conf
@@ -41,14 +41,14 @@
 +ppc		ppc/vanilla
 
 # ARM architectures
-#+armv7hl	armv7hl/default
-#+armv7hl	armv7hl/imx51
-#+armv7hl	armv7hl/omap2plus
-#+armv7hl	armv7hl/tegra
-#+armv7hl	armv7hl/u8500
-#+armv7hl	armv7hl/cubox
-#+armv7hl	armv7hl/exynos
-#+armv7hl	armv7hl/highbank
++armv7hl	armv7hl/default
++armv7hl	armv7hl/imx51
++armv7hl	armv7hl/omap2plus
++armv7hl	armv7hl/tegra
++armv7hl	armv7hl/u8500
++armv7hl	armv7hl/cubox
++armv7hl	armv7hl/exynos
++armv7hl	armv7hl/highbank
 
 # SLES
 # identical to ppc64 flavor, all KMP packages need a kernel-default
