--- a/series.conf
+++ b/series.conf
@@ -154,6 +154,7 @@
 	patches.arch/arm-fix-build-ux500-module.diff
 	patches.arch/arm-exynos-nosparse.patch
 	patches.arch/arm-origen-regulator.patch
+	patches.arch/arm-thermal-build-error.patch
 
 	########################################################
 	# S/390
