Fixup kvm for s390.

--- a/series.conf
+++ b/series.conf
@@ -161,6 +161,7 @@
 	########################################################
 	patches.arch/s390-message-catalog.diff
 	patches.arch/kmsg-fix-parameter-limitations
+	patches.arch/s390-remove-kvm-para.patch
 
         ########################################################
         # VM/FS patches
