--- a/rpm/kernel-binary.spec.in
+++ b/rpm/kernel-binary.spec.in
@@ -819,6 +819,7 @@ Provides:       multiversion(kernel)
 Provides:       %name-devel = %version-%source_rel
 Requires:       kernel-devel%variant = %version-%source_rel
 Supplements:    packageand(%name:kernel-devel%variant)
+PreReq:         coreutils
 
 %description devel
 This package contains files necessary for building kernel modules (and
