Add support to armv5 versatile kernel

--- a/config.conf
+++ b/config.conf
@@ -41,6 +41,7 @@
 +ppc		ppc/vanilla
 
 # ARM architectures
++armv5tel	armv5tel/versatile
 +armv7hl	armv7hl/default
 +armv7hl	armv7hl/imx51
 +armv7hl	armv7hl/omap2plus
