--- a/series.conf
+++ b/series.conf
@@ -31,6 +31,7 @@
 	patches.kernel.org/patch-3.6.1-2
 	patches.kernel.org/patch-3.6.2-3
 	patches.kernel.org/patch-3.6.3-4
+	patches.kernel.org/patch-3.6.4-5
 
         ########################################################
         # Build fixes that apply to the vanilla kernel too.
