--- a/series.conf
+++ b/series.conf
@@ -553,116 +553,122 @@
 # re-basing to a newer xen tree.
 #
 	# split out patches
-+update_xen	patches.xen/kexec-move-segment-code-i386.patch
-+update_xen	patches.xen/kexec-move-segment-code-x86_64.patch
-+update_xen	patches.xen/ipv6-no-autoconf
-+update_xen	patches.xen/pci-guestdev
-+update_xen	patches.xen/pci-reserve
+	patches.xen/kexec-move-segment-code-i386.patch
+	patches.xen/kexec-move-segment-code-x86_64.patch
+	patches.xen/ipv6-no-autoconf
+	patches.xen/pci-guestdev
+	patches.xen/pci-reserve
 
-+update_xen	# bulk stuff, new files for xen
-+update_xen	patches.xen/xen3-auto-xen-arch.diff
-+update_xen	patches.xen/xen3-auto-xen-drivers.diff
-+update_xen	patches.xen/xen3-auto-include-xen-interface.diff
-+update_xen	patches.xen/xen3-auto-blktap2-pvops.diff
+	# bulk stuff, new files for xen
+	patches.xen/xen3-auto-xen-arch.diff
+	patches.xen/xen3-auto-xen-drivers.diff
+	patches.xen/xen3-auto-include-xen-interface.diff
+	patches.xen/xen3-auto-blktap2-pvops.diff
 
-+update_xen	# kconfig bits for xen
-+update_xen	patches.xen/xen3-auto-xen-kconfig.diff
+	# kconfig bits for xen
+	patches.xen/xen3-auto-xen-kconfig.diff
 
-+update_xen	# common code changes
-+update_xen	patches.xen/xen3-auto-common.diff
-+update_xen	patches.xen/xen3-auto-arch-x86.diff
-+update_xen	patches.xen/xen3-auto-arch-i386.diff
-+update_xen	patches.xen/xen3-auto-arch-x86_64.diff
+	# common code changes
+	patches.xen/xen3-auto-common.diff
+	patches.xen/xen3-auto-arch-x86.diff
+	patches.xen/xen3-auto-arch-i386.diff
+	patches.xen/xen3-auto-arch-x86_64.diff
 
-+update_xen	# fixups due to upstream Xen parts
-+update_xen	patches.xen/xen3-fixup-xen
+	# fixups due to upstream Xen parts
+	patches.xen/xen3-fixup-xen
 
-+update_xen	# newer changeset backports
+	# newer changeset backports
 
-+update_xen	# changes outside arch/{i386,x86_64}/xen
-+update_xen	patches.xen/xen3-fixup-kconfig
-+update_xen	patches.xen/xen3-fixup-common
-+update_xen	patches.xen/xen3-fixup-arch-x86
-+update_xen	patches.xen/xen3-fixup-blktap2-pvops
+	# changes outside arch/{i386,x86_64}/xen
+	patches.xen/xen3-fixup-kconfig
+	patches.xen/xen3-fixup-common
+	patches.xen/xen3-fixup-arch-x86
+	patches.xen/xen3-fixup-blktap2-pvops
 
-+update_xen	# ports of upstream patches
-+update_xen	patches.xen/xen3-patch-2.6.18
-+update_xen	patches.xen/xen3-patch-2.6.19
-+update_xen	patches.xen/xen3-patch-2.6.20
-+update_xen	patches.xen/xen3-patch-2.6.21
-+update_xen	patches.xen/xen3-patch-2.6.22
-+update_xen	patches.xen/xen3-patch-2.6.23
-+update_xen	patches.xen/xen3-patch-2.6.24
-+update_xen	patches.xen/xen3-patch-2.6.25
-+update_xen	patches.xen/xen3-patch-2.6.26
-+update_xen	patches.xen/xen3-patch-2.6.27
-+update_xen	patches.xen/xen3-patch-2.6.28
-+update_xen	patches.xen/xen3-patch-2.6.29
-+update_xen	patches.xen/xen3-patch-2.6.30
-+update_xen	patches.xen/xen3-patch-2.6.31
-+update_xen	patches.xen/xen3-patch-2.6.32
-+update_xen	patches.xen/xen3-patch-2.6.33
-+update_xen	patches.xen/xen3-patch-2.6.34
-+update_xen	patches.xen/xen3-patch-2.6.35
-+update_xen	patches.xen/xen3-patch-2.6.36
-+update_xen	patches.xen/xen3-patch-2.6.37
-+update_xen	patches.xen/xen3-patch-2.6.38
-+update_xen	patches.xen/xen3-patch-2.6.39
-+update_xen	patches.xen/xen3-patch-3.0
-+update_xen	patches.xen/xen3-patch-3.1
-+update_xen	patches.xen/xen3-patch-3.2
-+update_xen	patches.xen/xen3-patch-3.3
-+update_xen	patches.xen/xen3-patch-3.4
-+update_xen	patches.xen/xen3-patch-3.5
-+update_xen	patches.xen/xen3-patch-3.6
+	# ports of upstream patches
+	patches.xen/xen3-patch-2.6.18
+	patches.xen/xen3-patch-2.6.19
+	patches.xen/xen3-patch-2.6.20
+	patches.xen/xen3-patch-2.6.21
+	patches.xen/xen3-patch-2.6.22
+	patches.xen/xen3-patch-2.6.23
+	patches.xen/xen3-patch-2.6.24
+	patches.xen/xen3-patch-2.6.25
+	patches.xen/xen3-patch-2.6.26
+	patches.xen/xen3-patch-2.6.27
+	patches.xen/xen3-patch-2.6.28
+	patches.xen/xen3-patch-2.6.29
+	patches.xen/xen3-patch-2.6.30
+	patches.xen/xen3-patch-2.6.31
+	patches.xen/xen3-patch-2.6.32
+	patches.xen/xen3-patch-2.6.33
+	patches.xen/xen3-patch-2.6.34
+	patches.xen/xen3-patch-2.6.35
+	patches.xen/xen3-patch-2.6.36
+	patches.xen/xen3-patch-2.6.37
+	patches.xen/xen3-patch-2.6.38
+	patches.xen/xen3-patch-2.6.39
+	patches.xen/xen3-patch-3.0
+	patches.xen/xen3-patch-3.1
+	patches.xen/xen3-patch-3.2
+	patches.xen/xen3-patch-3.3
+	patches.xen/xen3-patch-3.4
+	patches.xen/xen3-patch-3.5
+	patches.xen/xen3-patch-3.6
+	patches.xen/xen3-patch-3.7-rc3
 
-+update_xen	# ports of other patches
-+update_xen	patches.xen/xen3-acpi_override_2_2.patch
-+update_xen	patches.xen/xen3-stack-unwind
-+update_xen	patches.xen/xen3-x86_64-unwind-annotations
+	# ports of other patches
+	patches.xen/xen3-003-acpi_initrd_override_tables.patch
+	patches.xen/xen3-007-acpi_initrd_override_tables.patch
+	patches.xen/xen3-010-acpi_initrd_override_tables.patch
+	patches.xen/xen3-stack-unwind
+	patches.xen/xen3-x86_64-unwind-annotations
 
-+update_xen	# bugfixes and enhancements
-+update_xen	patches.xen/xen-sys-suspend
-+update_xen	patches.xen/xen-ipi-per-cpu-irq
-+update_xen	patches.xen/xen-virq-per-cpu-irq
-+update_xen	patches.xen/xen-clockevents
-+update_xen	patches.xen/xen-spinlock-poll-early
-+update_xen	patches.xen/xen-pcpu-hotplug
-+update_xen	patches.xen/xen-pcpu-hotplug-kexec
-+update_xen	patches.xen/xen-mem-hotplug
-+update_xen	patches.xen/xen-swiotlb-heuristics
-+update_xen	patches.xen/xen-configurable-guest-devices
-+update_xen	patches.xen/xen-setup-gsi
-+update_xen	patches.xen/xen-sections
-+update_xen	patches.xen/xen-unpriv-build
-+update_xen	patches.xen/xen-cpufreq-report
-+update_xen	patches.xen/xen-balloon-max-target
-+update_xen	patches.xen/xen-blkif-protocol-fallback-hack
-+update_xen	patches.xen/xen-blkback-cdrom
-+update_xen	patches.xen/xen-blktap-modular
-+update_xen	patches.xen/xen-blktap-write-barriers
-+update_xen	patches.xen/xen-blktap2-configurable-nr-devs
-+update_xen	patches.xen/xen-blkif-op-packet
-+update_xen	patches.xen/xen-blkfront-cdrom
-+update_xen	patches.xen/xen-blkfront-hvm-no-cdrom
-+update_xen	patches.xen/xen-netback-nr-irqs
-+update_xen	patches.xen/xen-netback-notify-multi
-+update_xen	patches.xen/xen-netback-generalize
-+update_xen	patches.xen/xen-netback-multiple-tasklets
-+update_xen	patches.xen/xen-netback-kernel-threads
-+update_xen	patches.xen/xen-cxgb3
-+update_xen	patches.xen/xen-dcdbas
-+update_xen	patches.xen/xen-x86-panic-no-reboot
-+update_xen	patches.xen/xen-x86-dcr-fallback
-+update_xen	patches.xen/xen-x86-no-lapic
-+update_xen	patches.xen/xen-x86-pmd-handling
-+update_xen	patches.xen/xen-x86-bigmem
-+update_xen	patches.xen/xen-x86-exit-mmap
-+update_xen	patches.xen/xen-x86-per-cpu-vcpu-info
-+update_xen	patches.xen/xen-x86-pcpu
-+update_xen	patches.xen/xen-x86-EFI
-+update_xen	patches.xen/xen-x86_64-pgd-pin
-+update_xen	patches.xen/xen-x86_64-pgd-alloc-order
-+update_xen	patches.xen/xen-x86_64-dump-user-pgt
-+update_xen	patches.xen/xen-x86_64-note-init-p2m
-+update_xen	patches.xen/xen-x86_64-unmapped-initrd
+	# bugfixes and enhancements
+	patches.xen/xen-sys-suspend
+	patches.xen/xen-ipi-per-cpu-irq
+	patches.xen/xen-virq-per-cpu-irq
+	patches.xen/xen-clockevents
+	patches.xen/xen-spinlock-poll-early
+	patches.xen/xen-pcpu-hotplug
+	patches.xen/xen-pcpu-hotplug-kexec
+	patches.xen/xen-mem-hotplug
+	patches.xen/xen-swiotlb-heuristics
+	patches.xen/xen-configurable-guest-devices
+	patches.xen/xen-setup-gsi
+	patches.xen/xen-sections
+	patches.xen/xen-unpriv-build
+	patches.xen/xen-cpufreq-report
+	patches.xen/xen-multi-page-ring
+	patches.xen/xen-balloon-max-target
+	patches.xen/xen-blkback-multi-page-ring
+	patches.xen/xen-blkback-cdrom
+	patches.xen/xen-blkif-protocol-fallback-hack
+	patches.xen/xen-blkfront-multi-page-ring
+	patches.xen/xen-blkif-op-packet
+	patches.xen/xen-blkfront-cdrom
+	patches.xen/xen-blkfront-hvm-no-cdrom
+	patches.xen/xen-blktap-modular
+	patches.xen/xen-blktap-write-barriers
+	patches.xen/xen-blktap2-configurable-nr-devs
+	patches.xen/xen-netback-nr-irqs
+	patches.xen/xen-netback-notify-multi
+	patches.xen/xen-netback-generalize
+	patches.xen/xen-netback-multiple-tasklets
+	patches.xen/xen-netback-kernel-threads
+	patches.xen/xen-cxgb3
+	patches.xen/xen-dcdbas
+	patches.xen/xen-x86-panic-no-reboot
+	patches.xen/xen-x86-dcr-fallback
+	patches.xen/xen-x86-no-lapic
+	patches.xen/xen-x86-pmd-handling
+	patches.xen/xen-x86-bigmem
+	patches.xen/xen-x86-exit-mmap
+	patches.xen/xen-x86-per-cpu-vcpu-info
+	patches.xen/xen-x86-pcpu
+	patches.xen/xen-x86-EFI
+	patches.xen/xen-x86_64-pgd-pin
+	patches.xen/xen-x86_64-pgd-alloc-order
+	patches.xen/xen-x86_64-dump-user-pgt
+	patches.xen/xen-x86_64-note-init-p2m
+	patches.xen/xen-x86_64-unmapped-initrd
