- Update to 3.7-rc5. - Update Xen patches additionally to c/s 1204:

--- a/series.conf
+++ b/series.conf
@@ -614,6 +614,7 @@
 	patches.xen/xen3-patch-3.5
 	patches.xen/xen3-patch-3.6
 	patches.xen/xen3-patch-3.7-rc3
+	patches.xen/xen3-patch-3.7-rc4-rc5
 
 	# ports of other patches
 	patches.xen/xen3-003-acpi_initrd_override_tables.patch
