--- a/series.conf
+++ b/series.conf
@@ -33,6 +33,7 @@
 	patches.kernel.org/patch-3.6.3-4
 	patches.kernel.org/patch-3.6.4-5
 	patches.kernel.org/patch-3.6.5-6
+	patches.kernel.org/patch-3.6.6-7
 
         ########################################################
         # Build fixes that apply to the vanilla kernel too.
