rpm/kernel-binary.spec.in: Do not remove fillup from the buildsystem (bnc#781327)

--- a/rpm/kernel-binary.spec.in
+++ b/rpm/kernel-binary.spec.in
@@ -88,7 +88,7 @@ Requires(post): mkinitrd
 #!BuildIgnore: perl-Bootloader mkinitrd
 # Remove some packages that are installed automatically by the build system,
 # but are not needed to build the kernel
-#!BuildIgnore: autoconf automake gettext-runtime libtool cvs gettext-tools m4 udev fillup insserv
+#!BuildIgnore: autoconf automake gettext-runtime libtool cvs gettext-tools m4 udev insserv
 
 %ifarch ia64
 # arch/ia64/scripts/unwcheck.py
