fate#314663 hyper-v memory ballooning support - mm: Export a function to get vm committed memory. - Drivers: hv: Add Hyper-V balloon driver. - Drivers: hv: balloon: Fix a bug in the definition of struct   dm_info_msg. - Update config files. fate#314665 hyper-v: Update the Vmbus protocol - Drivers: hv: Implement routines for read side signaling   optimization. - Drivers: hv: Add state to manage batched reading. - Drivers: hv: Turn off batched reading for util drivers. - Drivers: hv: Optimize signaling in the read path. - Drivers: hv: Optimize the signaling on the write path. - Drivers: hv: Get rid of hv_get_ringbuffer_interrupt_mask(). - Drivers: hv: Support handling multiple VMBUS versions. - Drivers: hv: Update the ring buffer structure to match win8   functionality. - Drivers: hv: Extend/modify vmbus_channel_offer_channel for   win7 and beyond. - Drivers: hv: Save and export negotiated vmbus version. - Drivers: hv: Change the signature for hv_signal_event(). - Drivers: hv: Change the signature of vmbus_set_event(). - Drivers: hv: Move vmbus version definitions to hyperv.h. - Drivers: hv: Manage signaling state on a per-connection basis. - Drivers: hv: Cleanup vmbus_set_event() to support win7 and   beyond. - Drivers: hv: Setup a mapping for Hyper-V's notion cpu ID. - Drivers: hv: Add state to manage incoming channel interrupt   load. - Drivers: hv: Modify the interrupt handling code to support   win8 and beyond. - Drivers: hv: Add code to distribute channel interrupt load. - Drivers: hv: Get rid of the unused global signaling state. - Drivers: hv: Get rid of unnecessary request for offers. - Drivers: hv: Manage event tasklets on per-cpu basis. - Drivers: hv: Handle vmbus interrupts concurrently on all cpus. - Drivers: hv: Add a check to deal with spurious interrupts. - Drivers: hv: Enable protocol negotiation with win8 hosts. - Drivers: hv: Implement flow management on the send side. - Drivers: hv: Capture the host build information. - Drivers: hv: Cleanup and con

--- a/series.conf
+++ b/series.conf
@@ -227,6 +227,37 @@
 	########################################################
 	# Suse specific stuff
 	########################################################
+	patches.suse/suse-hv-fate314663-0001-mm-Export-a-function-to-get-vm-committed-memory.patch
+	patches.suse/suse-hv-fate314663-0002-Drivers-hv-Add-Hyper-V-balloon-driver.patch
+	patches.suse/suse-hv-fate314663-0003-Drivers-hv-balloon-Fix-a-bug-in-the-definition-of-st.patch
+	patches.suse/suse-hv-fate314665-0001-Drivers-hv-Implement-routines-for-read-side-signalin.patch
+	patches.suse/suse-hv-fate314665-0002-Drivers-hv-Add-state-to-manage-batched-reading.patch
+	patches.suse/suse-hv-fate314665-0003-Drivers-hv-Turn-off-batched-reading-for-util-drivers.patch
+	patches.suse/suse-hv-fate314665-0004-Drivers-hv-Optimize-signaling-in-the-read-path.patch
+	patches.suse/suse-hv-fate314665-0005-Drivers-hv-Optimize-the-signaling-on-the-write-path.patch
+	patches.suse/suse-hv-fate314665-0006-Drivers-hv-Get-rid-of-hv_get_ringbuffer_interrupt_ma.patch
+	patches.suse/suse-hv-fate314665-0007-Drivers-hv-Support-handling-multiple-VMBUS-versions.patch
+	patches.suse/suse-hv-fate314665-0008-Drivers-hv-Update-the-ring-buffer-structure-to-match.patch
+	patches.suse/suse-hv-fate314665-0009-Drivers-hv-Extend-modify-vmbus_channel_offer_channel.patch
+	patches.suse/suse-hv-fate314665-0010-Drivers-hv-Save-and-export-negotiated-vmbus-version.patch
+	patches.suse/suse-hv-fate314665-0011-Drivers-hv-Change-the-signature-for-hv_signal_event.patch
+	patches.suse/suse-hv-fate314665-0012-Drivers-hv-Change-the-signature-of-vmbus_set_event.patch
+	patches.suse/suse-hv-fate314665-0013-Drivers-hv-Move-vmbus-version-definitions-to-hyperv..patch
+	patches.suse/suse-hv-fate314665-0014-Drivers-hv-Manage-signaling-state-on-a-per-connectio.patch
+	patches.suse/suse-hv-fate314665-0015-Drivers-hv-Cleanup-vmbus_set_event-to-support-win7-a.patch
+	patches.suse/suse-hv-fate314665-0016-Drivers-hv-Setup-a-mapping-for-Hyper-V-s-notion-cpu-.patch
+	patches.suse/suse-hv-fate314665-0017-Drivers-hv-Add-state-to-manage-incoming-channel-inte.patch
+	patches.suse/suse-hv-fate314665-0018-Drivers-hv-Modify-the-interrupt-handling-code-to-sup.patch
+	patches.suse/suse-hv-fate314665-0019-Drivers-hv-Add-code-to-distribute-channel-interrupt-.patch
+	patches.suse/suse-hv-fate314665-0020-Drivers-hv-Get-rid-of-the-unused-global-signaling-st.patch
+	patches.suse/suse-hv-fate314665-0021-Drivers-hv-Get-rid-of-unnecessary-request-for-offers.patch
+	patches.suse/suse-hv-fate314665-0022-Drivers-hv-Manage-event-tasklets-on-per-cpu-basis.patch
+	patches.suse/suse-hv-fate314665-0023-Drivers-hv-Handle-vmbus-interrupts-concurrently-on-a.patch
+	patches.suse/suse-hv-fate314665-0024-Drivers-hv-Add-a-check-to-deal-with-spurious-interru.patch
+	patches.suse/suse-hv-fate314665-0025-Drivers-hv-Enable-protocol-negotiation-with-win8-hos.patch
+	patches.suse/suse-hv-fate314665-0026-Drivers-hv-Implement-flow-management-on-the-send-sid.patch
+	patches.suse/suse-hv-fate314665-0027-Drivers-hv-Capture-the-host-build-information.patch
+	patches.suse/suse-hv-fate314665-0028-Drivers-hv-Cleanup-and-consolidate-reporting-of-buil.patch
 	patches.suse/suse-hv-identify-virtual-pc-in-ata_piix.patch
 
         ########################################################
