--- a/series.conf
+++ b/series.conf
@@ -646,6 +646,7 @@
 	patches.xen/xen3-patch-3.6
 	patches.xen/xen3-patch-3.7-rc3
 	patches.xen/xen3-patch-3.7-rc4-rc5
+	patches.xen/xen3-patch-3.7-rc6-rc7
 
 	# ports of other patches
 	patches.xen/xen3-003-acpi_initrd_override_tables.patch
@@ -697,6 +698,7 @@
 	patches.xen/xen-x86-per-cpu-vcpu-info
 	patches.xen/xen-x86-pcpu
 	patches.xen/xen-x86-EFI
+	patches.xen/xen-x86-bzImage
 	patches.xen/xen-x86_64-pgd-pin
 	patches.xen/xen-x86_64-pgd-alloc-order
 	patches.xen/xen-x86_64-dump-user-pgt
