--- a/series.conf
+++ b/series.conf
@@ -36,6 +36,7 @@
 	patches.kernel.org/patch-3.6.6-7
 	patches.kernel.org/patch-3.6.7-8
 	patches.kernel.org/patch-3.6.8-9
+	patches.kernel.org/patch-3.6.9-10
 
         ########################################################
         # Build fixes that apply to the vanilla kernel too.
