Drivers: hv: balloon: Fix a memory leak.

--- a/series.conf
+++ b/series.conf
@@ -230,6 +230,7 @@
 	patches.suse/suse-hv-fate314663-0001-mm-Export-a-function-to-get-vm-committed-memory.patch
 	patches.suse/suse-hv-fate314663-0002-Drivers-hv-Add-Hyper-V-balloon-driver.patch
 	patches.suse/suse-hv-fate314663-0003-Drivers-hv-balloon-Fix-a-bug-in-the-definition-of-st.patch
+	patches.suse/suse-hv-fate314663-0004-Drivers-hv-balloon-Fix-a-memory-leak.patch
 	patches.suse/suse-hv-fate314665-0001-Drivers-hv-Implement-routines-for-read-side-signalin.patch
 	patches.suse/suse-hv-fate314665-0002-Drivers-hv-Add-state-to-manage-batched-reading.patch
 	patches.suse/suse-hv-fate314665-0003-Drivers-hv-Turn-off-batched-reading-for-util-drivers.patch
