--- a/series.conf
+++ b/series.conf
@@ -27,6 +27,7 @@
 	# DO NOT MODIFY THEM!
 	# Send separate patches upstream if you find a problem...
 	########################################################
+	patches.kernel.org/patch-3.7.1
 
         ########################################################
         # Build fixes that apply to the vanilla kernel too.
@@ -38,7 +39,6 @@
 	patches.rpmify/pti-depends-on-x86-pci
 	patches.rpmify/geode-depends-on-x86_32
 	patches.rpmify/chipidea-clean-up-dependencies
-	patches.rpmify/ezusb-add-dependency-to-usb
 
         ########################################################
         # kABI consistency patches
