--- a/series.conf
+++ b/series.conf
@@ -646,9 +646,7 @@
 	patches.xen/xen3-patch-3.4
 	patches.xen/xen3-patch-3.5
 	patches.xen/xen3-patch-3.6
-	patches.xen/xen3-patch-3.7-rc3
-	patches.xen/xen3-patch-3.7-rc4-rc5
-	patches.xen/xen3-patch-3.7-rc6-rc7
+	patches.xen/xen3-patch-3.7
 
 	# ports of other patches
 	patches.xen/xen3-003-acpi_initrd_override_tables.patch
