drm/i915: TLB invalidation with MI_FLUSH_DW requires a post-sync op v3 (bnc#795963).

--- a/series.conf
+++ b/series.conf
@@ -406,6 +406,7 @@
 	########################################################
 	# DRM/Video
 	########################################################
+	patches.fixes/drm-i915-TLB-invalidation-with-MI_FLUSH_DW-requires-.patch
 
 	########################################################
 	# video4linux
