Updated to 3.8-rc2.

--- a/config.conf
+++ b/config.conf
@@ -38,15 +38,15 @@
 +ppc64		ppc64/vanilla
 
 # ARM architectures
-+armv5tel	armv5tel/versatile
-+armv7hl	armv7hl/default
-+armv7hl	armv7hl/imx51
-+armv7hl	armv7hl/omap2plus
-+armv7hl	armv7hl/tegra
-+armv7hl	armv7hl/u8500
-+armv7hl	armv7hl/cubox
-+armv7hl	armv7hl/exynos
-+armv7hl	armv7hl/highbank
+#+armv5tel	armv5tel/versatile
+#+armv7hl	armv7hl/default
+#+armv7hl	armv7hl/imx51
+#+armv7hl	armv7hl/omap2plus
+#+armv7hl	armv7hl/tegra
+#+armv7hl	armv7hl/u8500
+#+armv7hl	armv7hl/cubox
+#+armv7hl	armv7hl/exynos
+#+armv7hl	armv7hl/highbank
 
 +s390		s390/s390
 +s390 -syms	s390/trace
