--- a/series.conf
+++ b/series.conf
@@ -38,6 +38,7 @@
 	patches.rpmify/pti-depends-on-x86-pci
 	patches.rpmify/geode-depends-on-x86_32
 	patches.rpmify/chipidea-clean-up-dependencies
+	patches.rpmify/sb105x-remove-asm-segment-h-dependency
 
         ########################################################
         # kABI consistency patches
