hyperv: force ws2008 during vmbus negotiation.

--- a/series.conf
+++ b/series.conf
@@ -261,6 +261,7 @@
 	patches.suse/suse-hv-fate314665-0027-Drivers-hv-Capture-the-host-build-information.patch
 	patches.suse/suse-hv-fate314665-0028-Drivers-hv-Cleanup-and-consolidate-reporting-of-buil.patch
 	patches.suse/suse-hv-identify-virtual-pc-in-ata_piix.patch
+	patches.suse/suse-hv-fate314665-force-win2008.patch
 
         ########################################################
         # Networking, IPv6
