--- a/config.conf
+++ b/config.conf
@@ -38,7 +38,7 @@
 +ppc64		ppc64/vanilla
 
 # ARM architectures
-#+armv5tel	armv5tel/versatile
++armv5tel	armv5tel/versatile
 #+armv7hl	armv7hl/default
 #+armv7hl	armv7hl/imx51
 #+armv7hl	armv7hl/omap2plus
